@@ -4650,3 +4650,6 @@ Changelog for GXemul:
 		main focus of end-users of GXemul still.
 20180219	Basic interrupt controller and timer interrupt for LUNA88K.
 20180220	Minor progress on the LUNA88K framebuffer.
+20180223	Serial controller interrupt progress for LUNA88K; some
+		interaction can be done with OpenBSD/luna88k ramdisk user-
+		land but it is shaky.
